* fix footer display at the bottom of the page * hide the whole contact form upon submission * show the whole contact form again if the submission failed * clean up dead code * fix the jumping of the page upon clicking on a menu item

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,12 +1,19 @@
+html,
 body {
+  height: 100%;
+}
+
+body {
+  margin: 0 8px 0 8px;
   background-color: white;
   text-align: left;
+  display: flex;
+  flex-direction: column;
 }
 
 #content {
-  margin: 25px;
-  min-height: 250px;
   width: 100%;
+  flex: 1 0 auto;
 }
 
 #{$all-text-inputs} {
